# simply-cpp-pdf

./: .gitignore  CMakeLists.txt  README.md  sc.h
include/: base_types.h  color.h  font_collection.h  font_spec.h  pdf.h  pdf_rect.h  rect.h  svg2pdf.h  svg2png.h  svg_element.h  svg_parser.h
src/: base64.cpp  base_types.cpp  color.cpp  font_collection.cpp  font_spec.cpp  pdf.cpp  pdf_rect.cpp  rest.cpp  sc.cpp  svg2pdf.cpp  svg_element.cpp  svg_parser.cpp
test/: base64.cpp  pdf.cpp
